--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -1,3 +1,4 @@
+@use 'sass:color';
 @use 'sass:math';
 @use 'variables' as vars;
 
@@ -20,7 +21,7 @@
 }
 
 // Mixin for custom scrollbar styling
-@mixin scrollbar($width: 6px, $thumb-color: vars.$color-gray-form, $track-margin: 0px) {
+@mixin scrollbar($width: 8px, $thumb-color: vars.$color-gray-form, $track-margin: 0px) {
   scrollbar-width: thin;
   scrollbar-color: #{$thumb-color} transparent;
 
@@ -33,13 +34,25 @@
     background: transparent;
     border-radius: 10px;
     @if $track-margin != 0px {
-      margin-block: $track-margin;
+      margin-top: $track-margin;
+      margin-bottom: $track-margin;
     }
   }
 
   &::-webkit-scrollbar-thumb {
     background-color: $thumb-color;
     border-radius: 10px;
+    border: 2px solid transparent;
+    background-clip: padding-box;
+    transition: background-color 0.2s ease;
+
+    &:hover {
+      background-color: color.adjust($thumb-color, $lightness: -12%);
+    }
+
+    &:active {
+      background-color: color.adjust($thumb-color, $lightness: -20%);
+    }
   }
 }
 
